[gd_scene load_steps=4 format=3 uid="uid://b4cu8c7c17qp5"]

[ext_resource type="Script" uid="uid://dbb3ohbjx0hb2" path="res://dialogue_system.gd" id="1_drk8f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a1gdn"]
bg_color = Color(0.111069, 0.165989, 0.207256, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tilw8"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.295867, 0.295867, 0.295866, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="DialogueSystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_drk8f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -320.0
offset_right = 820.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PortraitPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a1gdn")

[node name="Portrait" type="TextureRect" parent="MarginContainer/HBoxContainer/PortraitPanel"]
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="DialoguePanel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tilw8")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/DialoguePanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SpeakerName" type="Label" parent="MarginContainer/HBoxContainer/DialoguePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Speaker name"
uppercase = true

[node name="DialogueText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DialoguePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
bbcode_enabled = true
fit_content = true

[node name="ChoicesContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/DialoguePanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
